--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
         </activity>
         <activity android:name=".Models.MailActivity">
         </activity>
+
+        <provider
+                android:name=".ContactProvider"
+                android:authorities="com.example.diego.appcontactos.ContactProvider"/>
+
+        <activity android:name=".UpdateContactActivity">
+        </activity>
     </application>
 
 </manifest>
